# AsakinTiny

./: .gitignore  .replit  pyproject.toml  replit.md
asakin_tiny/: client.py  registry_client.py
attached_assets/: Pasted-You-are-a-senior-Python-engineer-building-a-reusable-li_1770546958221.txt  Pasted-You-are-modifying-an-existing-Replit-project-AsakinTiny_1770549291433.txt
python/: .env.example  pyproject.toml
python/asakin_tiny/: __init__.py  client.py  errors.py  registry_client.py
python/tests/: test_client_call.py
sdk/python/: README.md
sdk/python/asakin_tiny/: config.py  context.py  models.py
sdk/python/tests/: test_config.py  test_registry_client.py
tests/: test_client_call.py  test_registry_client.py
typescript/asakin_tiny_ts/: .env.example  README.md  package-lock.json  package.json  tsconfig.json
typescript/asakin_tiny_ts/src/: config.ts  correlation.ts  errors.ts  http.ts  index.ts  integrationClient.ts  registryClient.ts  tokenClient.ts  types.ts
typescript/asakin_tiny_ts/test/: integrationClient.test.ts
