[project]
name = "asakin-tiny"
version = "1.0.0"
description = "Lightweight client library for inter-app communication in the Asakin platform"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "respx>=0.22.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["asakin_tiny*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
